# llm-bench

./: .gitignore  LICENSE  PLAN.md  README.md  UI_REVIEW.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: App.tsx  global.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/bench/: mod.rs
src-tauri/src/core/: conversation.rs  mod.rs  model.rs  paths.rs
src-tauri/src/evals/: mod.rs
src-tauri/src/registry/: downloader.rs  mod.rs  seed.json
src-tauri/src/runtimes/: litertlm.rs  llamacpp.rs  mlx.rs  mod.rs
src-tauri/src/store/: mod.rs  schema.sql
src/components/: Sidebar.tsx
src/lib/: confirm.tsx  ipc.ts  toast.tsx  types.ts  useShortcut.ts
src/pages/: Benchmarks.tsx  Chat.tsx  Compare.tsx  Evals.tsx  Models.tsx
src/test/: Chat.test.tsx  Models.test.tsx  Pages.test.tsx  Sidebar.test.tsx  confirm.test.tsx  toast.test.tsx  types.test.ts  useShortcut.test.tsx
