[package]
name = "llm-bench"
version = "0.1.0"
description = "Desktop app for running LLMs across llama.cpp and LiteRT-LM"
authors = ["managers-can-code"]
license = "Apache-2.0"
repository = "https://github.com/managers-can-code/llm-bench"
edition = "2021"
rust-version = "1.77"

[lib]
name = "llm_bench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Async + concurrency
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for llama-server, HF Hub)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Errors / logging / utils
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
dirs = "5"

[features]
# Default feature set for Tauri build
default = ["custom-protocol"]
# This feature is used for production builds where `devUrl` points to the Vite output.
custom-protocol = ["tauri/custom-protocol"]
